# VSCode

./: readme.md  settings.json
00_intro/: CMakeLists.txt
01_helloworld/: CMakeLists.txt
01_helloworld/src/: foo.c  main.c
02_helloworld/: CMakeLists.txt
02_helloworld/lib/libmath/: math.c  math.h
02_helloworld/lib/libstring/: CMakeLists.txt
02_helloworld/src/: app.c  main.c  utils.c
03_helloworld/: CMakeLists.txt  readme.md
03_helloworld/include/: app.h  utils.h
03_helloworld/lib/libmath/: CMakeLists.txt
03_helloworld/lib/libstring/: string_utils.c  string_utils.h
03_helloworld/src/: main.c  utils.c
05_Complex/: execute.sh
05_Complex/include/: app.h
05_Complex/src/: app.cpp
05_Complex/tests/: test_app.cpp
06_Complex/: CMakeLists.txt
06_Complex/src/: main.cpp
08_GTest/include/: app.h
08_GTest/lib/: CMakeLists.txt
08_GTest/src/: app.cpp
08_GTest/tests/: main.cpp  test_app.cpp
08_GTest_CMake_Generation/: CMakeLists.txt  cmake_build.py
08_GTest_CMake_Generation/tests/: CMakeLists.txt
09_DynamicLibGen_Python_Usage/: CMakeLists.txt  CMakeLists.txt_backup  CMakeLists.txt_backup_1  math_functions.cpp  math_functions.h  math_functions.pyx  readme.md  test_cython.py
09_DynamicLibGen_Python_Usage/temp/: math_functions.cpp  math_functions.h  math_functions.pyx  setup.py  test_cython.py
